--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "autoprefixer": "^10.4.23",
     "canvas-confetti": "^1.9.4",
     "firebase": "^12.8.0",
